--- a/index.html
+++ b/index.html
@@ -1,99 +1,144 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio - Shasidaran M</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <!-- Header with navigation -->
-    <header>
-      <nav>
-        <div class="logo">Shasidaran M</div>
-        <ul class="nav-links">
-          <li><a href="#hero">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#education">Education</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Shasidaran M Portfolio</title>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css" />
+</head>
 
-    <main>
-      <!-- Hero Section -->
-      <section id="hero">
-        <div class="hero-content">
-          <h1>Shasidaran M</h1>
-          <h2>Bachelor of Computer Science</h2>
-          <p class="tagline">Passionate Developer & Lifelong Learner</p>
-          <a href="#contact" class="btn">Contact Me</a>
-        </div>
-      </section>
+<body>
 
-      <!-- About Me Section -->
-      <section id="about" class="section">
-        <h2>About Me</h2>
-        <p>
-          Hello! I am a computer science student with a passion for building web
+  <!-- Site Header with Title + Navigation -->
+  <div class="site-header">
+    <h2 class="site-title">Portfolio Website</h2>
+    <nav class="navbar">
+      <a href="#home">Home</a>
+      <a href="#about">About</a>
+      <a href="#certifications">Certifications</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </div>
+
+  <!-- Page Header -->
+  <header class="page-header fade-in" id="home">
+    <h1>Shasidaran M</h1>
+    <p>BCA Student at KJU | Learner</p>
+  </header>
+
+  <!-- About Section -->
+  <section id="about" class="content-section fade-in">
+    <h1>About Me</h1>
+    <p>
+         Hello! I am a computer science student with a passion for building web
           applications. I enjoy learning new technologies and solving complex
           problems through code. My goal is to become a full-stack developer and
           make meaningful contributions to innovative projects.
-        </p>
-      </section>
+    </p>
+    </p>
+  </section>
 
-      <!-- Education Section -->
-      <section id="education" class="section">
-        <h2>Education</h2>
-        <ul class="education-list">
-          <li>
-            <h3>Bachelor of Computer Science</h3>
-            <p>Kristu Jayanti (Deemed To Be University)</p>
-          </li>
-        </ul>
-      </section>
-
-      <!-- Skills Section -->
-      <section id="skills" class="section">
-        <h2>Skills</h2>
-        <div class="skills-list">
-          <div class="skill-card">HTML</div>
-          <div class="skill-card">CSS</div>
-          <div class="skill-card">JavaScript</div>
-          <div class="skill-card">Git</div>
-          <div class="skill-card">Problem Solving</div>
-        </div>
-      </section>
-
-      <!-- Contact Section -->
-      <section id="contact" class="section">
-        <h2>Contact</h2>
-        <p>
-          <span class="icon email"></span>
-          <a href="mailto:25bcae60@kristujayanti.com"
-            >25bcae60@kristujayanti.com</a
-          >
-        </p>
-        <p>
-          <span class="icon phone"></span>
-          <a href="tel:+917892469761">7892469761</a>
-        </p>
-        <p>
-          <span class="icon link"></span>
-          <a href="https://github.com/shasidaran" target="_blank">GitHub</a>
-        </p>
-      </section>
-    </main>
-
-    <!-- Footer -->
-    <footer>
-      <p>&copy; 2025 Shasidaran M. All rights reserved.</p>
-      <div class="social-links">
-        <a href="https://github.com/shasidaran" target="_blank">GitHub</a>
+  <!-- Recent Certifications -->
+  <section id="certifications" class="content-section fade-in">
+    <h1>Recent Certifications</h1>
+    <div class="cert-grid">
+      <div class="cert-item">
+        <img src="images/mongo db.png" alt="MongoDB Database Admin Path (Self-Managed)" width="400"/>
+        <p>MongoDB Database Admin Path (Self-Managed)</p>
       </div>
-    </footer>
+      <div class="cert-item">
+        <img src="images\ front-end.png" alt="Frontend Certification" width="400"/>
+        <p>Frontend Certification</p>
+      </div>
+      <div class="cert-item">
+        <img src="images\nodejs.png" alt="Advanced Concepts of NodeJS" width="400"/>
+        <p>Advanced Concepts of NodeJS</p>
+      </div>
+      <div class="cert-item">
+        <img src="images\git-guid.png" alt="Git and GitHub Certification" width="400" />
+        <p>Git and GitHub Certification</p>
+      </div>
+    </div>
+  </section>
 
-    <script src="script.js"></script>
-  </body>
+  <!-- Projects -->
+  <section id="projects" class="content-section fade-in">
+    <h1>Projects Developed</h1>
+
+    <div class="project">
+      <h2>Portfolio Website</h2>
+      <p><strong>Technologies Used</strong><br>
+      Python as Frontend and Backend<br>
+      MySQL as Database</p>
+    </div>
+
+    <div class="project">
+      <h2>Parking Management System</h2>
+      <p><strong>Technologies Used</strong><br>
+      HTML5, CSS3, JavaScript as Frontend<br>
+      Firebase as Backend and Database</p>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact" class="content-section fade-in">
+    <h1>Contact Me</h1>
+
+    <form id="contact-form">
+      <input type="text" id="name" placeholder="Your Name" required />
+      <input type="email" id="email" placeholder="Your Email" required />
+      <textarea id="message" placeholder="Your Message" required></textarea>
+      <button type="submit">Send</button>
+    </form>
+
+    <!-- Success/Error message -->
+    <div id="form-message"></div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="main-footer">
+    <p>&copy; 2026 My Portfolio | Built with HTML, CSS, JavaScript, Firebase</p>
+    <div class="social-icons">
+            <a href="https://www.linkedin.com/in/shasidaran/" target="_blank" aria-label="LinkedIn" class="linkedin">
+        <!-- LinkedIn SVG -->
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19 0h-14c-2.76 0-5 2.24-5 
+        5v14c0 2.76 2.24 5 5 5h14c2.76 
+        0 5-2.24 5-5v-14c0-2.76-2.24-5-5-5zm-11 
+        19h-3v-10h3v10zm-1.5-11.29c-.96 
+        0-1.75-.79-1.75-1.75s.79-1.75 
+        1.75-1.75 1.75.79 1.75 
+        1.75-.79 1.75-1.75 1.75zm13.5 
+        11.29h-3v-5.6c0-1.34-.03-3.07-1.87-3.07-1.87 
+        0-2.16 1.46-2.16 2.97v5.7h-3v-10h2.88v1.37h.04c.4-.75 
+        1.38-1.54 2.84-1.54 3.04 0 3.6 2 
+        3.6 4.59v5.58z"/></svg>
+      </a>
+
+      <a href="https://github.com/shasidaran/portfolio" target="_blank" aria-label="GitHub" class="github">
+        <!-- GitHub SVG -->
+        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22"><path d="M12 .5c-6.63 0-12 5.37-12 
+        12 0 5.3 3.44 9.8 8.21 11.39.6.11.82-.26.82-.58 
+        0-.29-.01-1.05-.02-2.06-3.34.73-4.04-1.61-4.04-1.61-.55-1.39-1.34-1.76-1.34-1.76-1.09-.74.08-.73.08-.73 
+        1.2.09 1.83 1.23 1.83 1.23 1.07 1.83 2.8 
+        1.3 3.49.99.11-.78.42-1.3.76-1.6-2.67-.3-5.47-1.34-5.47-5.95 
+        0-1.31.47-2.38 1.24-3.22-.12-.3-.54-1.52.12-3.17 
+        0 0 1.01-.32 3.3 1.23.96-.27 1.98-.41 
+        3-.41s2.04.14 3 .41c2.29-1.55 
+        3.3-1.23 3.3-1.23.66 1.65.24 2.87.12 
+        3.17.77.84 1.24 1.91 1.24 3.22 
+        0 4.62-2.81 5.65-5.49 5.95.43.37.81 
+        1.1.81 2.22 0 1.6-.01 2.89-.01 
+        3.29 0 .32.22.7.83.58 4.77-1.59 
+        8.21-6.09 8.21-11.39 0-6.63-5.37-12-12-12z"/></svg>
+      </a>
+    </div>
+  </footer>
+
+  <!-- Firebase + form logic -->
+  <script type="module" src="script.js"></script>
+
+</body>
 </html>
